MOZ_ENABLE_WAYLAND=1 crashes due to posix_fallocate failures
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
People
(Reporter: jbeich, Assigned: rmader)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files, 3 obsolete files)
|
1.47 KB,
patch
|
Details | Diff | Splinter Review | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
(Sorry, I can't submit on Phabricator due to bug 1536716.)
https://treeherder.mozilla.org/#/jobs?repo=try&revision=ad06c4629a7eb449776b330714a4e9b72222ae7f
https://treeherder.mozilla.org/#/jobs?repo=try&revision=8001a280e1c01e0983f74606edd5224b5025c9e9
Handle EINVAL and EOPNOTSUPP in WaylandShmPool::Resize as well.
Comment 3•6 years ago
|
||
Please use phabricator for it and mark me for review there.
Thanks.
Updated•6 years ago
|
I can't as explained in bug 1536716.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0c73e14dba7bb859429b576947f7c150acd1d673
After bug 1619882 posix_fallocate is now called after shm_open (non-filesystem object) which is not supported by FreeBSD < 13. Let's ignore ENODEV as well.
https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=247329#c3
Updated•6 years ago
|
Rebased after bug 1711094.
Updated•5 years ago
|
| Assignee | ||
Comment 7•4 years ago
|
||
Rebase of a patch by Jan Beich <jbeich@FreeBSD.org>
Updated•4 years ago
|
| Assignee | ||
Comment 8•4 years ago
|
||
Thanks for the patch and sorry it took so long @Jan!
Comment 10•4 years ago
|
||
| bugherder | ||
Comment 11•4 years ago
|
||
Do we need this on ESR?
| Assignee | ||
Comment 12•4 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #11)
Do we need this on ESR?
Nice to have - i.e. if it applies cleanly.
Comment 13•4 years ago
|
||
It does. Feel free to nominate :)
| Assignee | ||
Comment 14•4 years ago
|
||
Comment on attachment 9253047 [details]
Bug 1618914 - Fall back to ftruncate if posix_fallocate isn't supported by filesystem, r=stransky
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Fixes crashes in the (non-default) Wayland backend on some setups.
- User impact if declined: see above
- Fix Landed on Version: 96
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Code is simple and add a additional fallback for an unlikely case.
- String or UUID changes made by this patch:
Comment 15•4 years ago
|
||
Comment on attachment 9253047 [details]
Bug 1618914 - Fall back to ftruncate if posix_fallocate isn't supported by filesystem, r=stransky
Approved for 91.5esr.
Comment 16•4 years ago
|
||
| bugherder uplift | ||
Description
•