Bug 1618914 - Fall back to ftruncate if posix_fallocate isn't supported by filesystem, r=stransky

Rebase of a patch by Jan Beich <jbeich@FreeBSD.org>

Differential Revision: https://phabricator.services.mozilla.com/D132482