widget/gtk/WaylandBuffer.cpp
@@ -74,7 +74,10 @@ static int WaylandAllocateShmMemory(int aSize) {
   do {
     ret = posix_fallocate(fd, 0, aSize);
   } while (ret == EINTR);
-  if (ret != 0) {
+  if (ret == 0) {
+    return fd;
+  }
+  if (ret != ENODEV && ret != EINVAL && ret != EOPNOTSUPP) {
     NS_WARNING(
         nsPrintfCString("posix_fallocate() fails to allocate shm memory: %s",
                         strerror(ret))
@@ -82,7 +85,7 @@ static int WaylandAllocateShmMemory(int aSize) {
     close(fd);
     return -1;
   }
-#else
+#endif
   do {
     ret = ftruncate(fd, aSize);
   } while (ret < 0 && errno == EINTR);
@@ -93,7 +96,6 @@ static int WaylandAllocateShmMemory(int aSize) {
     close(fd);
     fd = -1;
   }
-#endif
 
   return fd;
 }
